[package]
name = "advent-of-code-2021"
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
description = "My rusty solutions to Advent of Code 2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.10"
